<resources>
    <string name="app_name">Scoop2u</string>
    <string name="Regi">Register</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="WBack">Welcome Back!</string>
    <string name="pword">Password</string>
    <string name="pwordConf">Confirm Password</string>
    <string name="passwordReset">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="accountDetails">Account Details</string>
    <string name="changePassword">Change Password</string>
    <string name="labelUsername">Username: </string>
    <string name="labelEmail">Email: </string>
    <string name="labelType">Type: </string>
    <string name="currPass">Current Password</string>
    <string name="newPass">New Password</string>
    <string name="reNewPass">Retype New Password</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_customer_map">customer_map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="api_key">AIzaSyDSs8zwher07x4A6Z8-fOIBpi9B5KJp9SI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Delivery Address</string>
</resources>