<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PrimaryColor"
    tools:context=".CustomerAccountFragment">

    <TextView
        android:id="@+id/textViewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:text="@string/accountDetails"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:divider="@drawable/table_divider"
        android:showDividers="middle|end"
      >

        <TableRow android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/accountEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelEmail"
                android:theme="@style/accountPageLabel"/>
            <TextView
                android:id="@+id/accountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="20dp"
                android:theme="@style/accountPageValue"
                android:layout_marginStart="20dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/accountUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelUsername"
                android:theme="@style/accountPageLabel"/>
            <TextView
                android:id="@+id/accountUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="20dp"
                android:theme="@style/accountPageValue"
                android:layout_marginStart="20dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/accountTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelType"
                android:theme="@style/accountPageLabel"/>
            <TextView
                android:id="@+id/accountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="20dp"
                android:theme="@style/accountPageValue"
                android:layout_marginStart="20dp" />

        </TableRow>

    </TableLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accountChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:background="@drawable/button_selector"
        android:text="@string/changePassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/button_selector"
        android:text="@string/Logout" />


</LinearLayout>